tests/baselines/reference/parserInExpression1.errors.txt
==== tests/cases/compiler/parserInExpression1.ts (1 errors) ====
    console.log("a" in { "a": true });
    ~~~~~~~
!!! parserInExpression1.ts(1,1): error TS2095: Cannot find name 'console'.